--- a/WebContent/myAv.css
+++ b/WebContent/myAv.css
@@ -1,3 +1,4 @@
+@CHARSET "ISO-8859-1";
 table,td{
 		text-align:center;
 	font-size: 20px;
@@ -47,6 +48,7 @@ table{
    padding: 15px;  
   background-position: center;
   background-size: cover;
+  overflow:auto;
   background-repeat: no-repeat;
      /* Sit on top */
 	top: 0;
@@ -61,14 +63,13 @@ table{
   	text-align: center;
     border-radius: 5px;
     display: inline-block;
-    margin-top:80px;
-    height: 300px;
+    margin-top:30px;
     margin-bottom:30px;
     background-color: white;
     }
 .container {
     padding-left: 35px;
     padding-right: 35px;
-    padding-top: 45px;
+    padding-top: 35px;
     }
 
