--- a/WebContent/myC.css
+++ b/WebContent/myC.css
@@ -1,3 +1,4 @@
+@CHARSET "ISO-8859-1";
 table,td{
 		text-align:center;
 	font-size: 20px;
@@ -13,6 +14,13 @@ table{
 .btnDiv{
 	margin-top: 40px;
 	
+}
+.hd1{
+	font-family: Arial, Helvetica, sans-serif;
+	font-style: bold;
+	margin-bottom: 30px;
+	padding-left: 30px;
+	text-align:left;
 }
 .button{
 	border:none;
@@ -44,7 +52,8 @@ table{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-   padding: 15px;  
+  align-items: center;
+   padding: 30px;  
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -59,16 +68,20 @@ table{
     transition: 0.3s;
     position: relative;
   	text-align: center;
+  	align-items:center;
     border-radius: 5px;
+    width: 950px;
+    height: 520px;
+    
     display: inline-block;
     margin-top:80px;
-    height: 300px;
     margin-bottom:30px;
     background-color: white;
     }
 .container {
-    padding-left: 35px;
-    padding-right: 35px;
-    padding-top: 45px;
+    padding-left: 70px;
+    padding-right: 70px;
+    padding-bottom: 45px;
+    padding-top: 35px;
     }
 
